Fix CSS in Header Make .site-slogan{font-size:1.7em;} & .block-2{letter-spacing:.1em;}

--- a/sites/all/themes/occupy/css/global.css
+++ b/sites/all/themes/occupy/css/global.css
@@ -72,7 +72,7 @@ h1.site-name, h2.site-name {
     letter-spacing: 2px;
 }
 .site-slogan{
-	font-size: 1.5em;
+	font-size: 1.7em;
 }
 /*---------------------------------------------MAIN MENU-----------------------------------------*/
 li.expanded, li.collapsed, li.leaf {
@@ -124,6 +124,7 @@ ul li.leaf {
 	padding: 20px 0;
 	width: 100%;
 	color: #3A3A3A;
+	letter-spacing: .1em;
 }
 /*-----------------------------------------NEWSLETTER FORM------------------------------------*/
 .block-15 {
